--- a/styles/css/animations.css
+++ b/styles/css/animations.css
@@ -1,11 +1,68 @@
 
-.theme-menu__button:disabled::before {
-  animation: arrow-animation 0.5s ease-in-out infinite alternate;
+.like-icon {
+  width: inherit;
+  height: inherit;
+  fill: var(--text-color);
+  position: relative;
+  z-index: 1;
+}
+
+.like-icon .heart {
+  transition: fill 0.1s;
+  transform-origin: center center;
+}
+
+.like-icon .contour {
+  fill: var(--text-color);
+  transition: background 0.1s linear;
+}
+
+.like-icon .main-body {
+  fill: var(--page-background);
+  transition: fill 0.3s linear;
+}
+
+.like-icon .core {
+  fill: var(--page-background);
+  transition: fill 0.3s 0.05s;
+}
+
+.like-icon .sparks {
+  opacity: 0;
+  fill: var(--heart-color);
+}
+
+.like-icon:hover .main-body {
+  fill: var(--text-color);
+}
+
+.like-icon:hover .core {
+  fill: var(--text-color);
+}
+
+.like-icon:active .main-body {
+  fill: var(--heart-color);
+}
+
+.like-icon:active .core {
+  fill: var(--heart-color);
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--heart-color);
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--heart-color);
+}
+
+.like-icon.is-liked .core {
+  fill: var(--heart-color);
 }
 
 .like-icon.is-liked .heart {
   animation: scale-animation 0.3s ease-in 0.1s 1 alternate;
-}
+} 
 
 .like-icon.is-liked .sparks {
   animation: sparks-animation 0.3s ease-in 0.3s 1 alternate;
